force-app/main/default/objects/Project__c/fields/Amenity_Header__c.field-meta.xml
<CustomField>
    <fullName>Amenity_Header__c</fullName>
    <description>Amenity Header</description>
    <inlineHelpText>Enter Amenity Header.</inlineHelpText>
    <label>Amenity Header</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>