force-app/main/default/objects/Project__c/fields/AvailableForView__c.field-meta.xml
<CustomField>
    <fullName>AvailableForView__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AvailableForView</label>
    <type>Checkbox</type>
</CustomField>