force-app/main/default/objects/Project__c/fields/Balance_DLD__c.field-meta.xml
<CustomField>
    <fullName>Balance_DLD__c</fullName>
    <formula>if(NOT(ISNULL(Target_DLD_Value__c)),
if(NOT(ISNULL(Actual_DLD_Value__c)),Target_DLD_Value__c-Actual_DLD_Value__c,Target_DLD_Value__c),
0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance DLD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>