force-app/main/default/objects/Project__c/fields/Bank_GL__c.field-meta.xml
<CustomField>
    <fullName>Bank_GL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bank GL</label>
    <referenceTo>AR_GL_Account__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>