force-app/main/default/objects/Project__c/fields/BTS_ANTICIPATED_HANDOVER_DATE__c.field-meta.xml
<CustomField>
    <fullName>BTS_ANTICIPATED_HANDOVER_DATE__c</fullName>
    <label>BTS ANTICIPATED HANDOVER DATE</label>
    <type>Date</type>
</CustomField>