force-app/main/default/objects/Project__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dummy 1</fullName>
            </value>
            <value>
                <fullName>Dummy 2</fullName>
            </value>
            <value>
                <fullName>Dummy 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>