force-app/main/default/objects/Project__c/fields/Credit_Card_Bank__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Bank__c</fullName>
    <label>Credit Card Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>