force-app/main/default/objects/Project__c/fields/CreditBankUnique__c.field-meta.xml
<CustomField>
    <fullName>CreditBankUnique__c</fullName>
    <formula>Credit_Card_Bank__c + &apos;-&apos; + Project_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreditBankUnique</label>
    <type>Text</type>
</CustomField>