force-app/main/default/objects/Project__c/fields/Default_Area_Column__c.field-meta.xml
<CustomField>
    <fullName>Default_Area_Column__c</fullName>
    <description>This Field is created for Project(Land) and acts as a &quot;Pricing Calculation source field&quot; i.e., pricing calculation is based on Plot Area (Sq.ft) or GFA (Sq.ft)</description>
    <label>Default Area Column</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plot Area (SQFT)</fullName>
            </value>
            <value>
                <fullName>GFA (SQFT)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>