force-app/main/default/objects/Project__c/fields/Default_Escrow_Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Default_Escrow_Bank_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Bank Account</label>
    <referenceTo>AR_Bank_Account__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>