force-app/main/default/objects/Project__c/fields/Default_VAT_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Default_VAT_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default VAT</label>
    <referenceTo>VAT__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>