force-app/main/default/objects/Project__c/fields/dSQFT14__c.field-meta.xml
<CustomField>
    <fullName>dSQFT14__c</fullName>
    <label>dSQFT14</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GFA (SQFT)</fullName>
            </value>
            <value>
                <fullName>GFA (SQMT)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>