force-app/main/default/objects/Project__c/fields/dSQFT8__c.field-meta.xml
<CustomField>
    <fullName>dSQFT8__c</fullName>
    <label>dSQFT8</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plot Area (SQFT)</fullName>
            </value>
            <value>
                <fullName>Plot Area (SQM)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>