force-app/main/default/objects/Project__c/fields/ERP_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>ERP_Project_Id__c</fullName>
    <description>Created for Nexus migration, To capture ERP Project Id from NKL system</description>
    <label>ERP Project Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>