force-app/main/default/objects/Project__c/fields/GFA_Rate__c.field-meta.xml
<CustomField>
    <fullName>GFA_Rate__c</fullName>
    <label>GFA Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>