force-app/main/default/objects/Project__c/fields/GL_Segment_6__c.field-meta.xml
<CustomField>
    <fullName>GL_Segment_6__c</fullName>
    <label>Oracle Project ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>