force-app/main/default/objects/Project__c/fields/Invoices_Bank__c.field-meta.xml
<CustomField>
    <fullName>Invoices_Bank__c</fullName>
    <description>Yardi data loading field requested by Shameer</description>
    <label>Invoices_Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>