force-app/main/default/objects/Project__c/fields/Is_Campaign_Changed__c.field-meta.xml
<CustomField>
    <fullName>Is_Campaign_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Campaign Changed?</label>
    <type>Checkbox</type>
</CustomField>