force-app/main/default/objects/Project__c/fields/Is_Disclosure_Statement_Available__c.field-meta.xml
<CustomField>
    <fullName>Is_Disclosure_Statement_Available__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Disclosure Statement Available</label>
    <type>Checkbox</type>
</CustomField>