force-app/main/default/objects/Project__c/fields/Legal_Entity_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Arabic__c</fullName>
    <label>Legal Entity Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>