force-app/main/default/objects/Project__c/fields/Legal_Entity_CL__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_CL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Entity</label>
    <referenceTo>AR_Legal_Entity__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>