force-app/main/default/objects/Project__c/fields/Legal_Entity_DHLE__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_DHLE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Entity DHLE</label>
    <referenceTo>AR_Legal_Entity__c</referenceTo>
    <relationshipLabel>Projects (Legal Entity DHLE)</relationshipLabel>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>