force-app/main/default/objects/Project__c/fields/Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity_Name__c</fullName>
    <label>Seller Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>