force-app/main/default/objects/Project__c/fields/Locality_Name__c.field-meta.xml
<CustomField>
    <fullName>Locality_Name__c</fullName>
    <label>Locality Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>