force-app/main/default/objects/Project__c/fields/Misc_Charges_Bank__c.field-meta.xml
<CustomField>
    <fullName>Misc_Charges_Bank__c</fullName>
    <label>Misc_Charges_Bank</label>
    <length>255</length>
    <type>Text</type>
</CustomField>