force-app/main/default/objects/Project__c/fields/MiscBankUnique__c.field-meta.xml
<CustomField>
    <fullName>MiscBankUnique__c</fullName>
    <formula>Misc_Charges_Bank__c + &apos;-&apos; +  Project_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MiscBankUnique</label>
    <type>Text</type>
</CustomField>