force-app/main/default/objects/Project__c/fields/Notes_Receivables_GL__c.field-meta.xml
<CustomField>
    <fullName>Notes_Receivables_GL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Notes Receivables GL</label>
    <referenceTo>AR_GL_Account__c</referenceTo>
    <relationshipLabel>Projects (Notes Receivables GL)</relationshipLabel>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>