force-app/main/default/objects/Project__c/fields/Oracle_Fusion_Interface__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Fusion_Interface__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Oracle Fusion Interface</label>
    <type>Checkbox</type>
</CustomField>