force-app/main/default/objects/Project__c/fields/Oracle_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Project_ID__c</fullName>
    <label>Oracle Project ID_Delete</label>
    <length>50</length>
    <type>Text</type>
</CustomField>