force-app/main/default/objects/Project__c/fields/Ownership_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Sub_Category__c</fullName>
    <label>Ownership Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Ownership_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>single family villa</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Labour camp</fullName>
            </value>
            <value>
                <fullName>Community facilities</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>