force-app/main/default/objects/Project__c/fields/Ownership_Sub_Category_AR__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Sub_Category_AR__c</fullName>
    <label>Ownership Sub Category AR</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>فيلا عائلية واحدة</fullName>
            </value>
            <value>
                <fullName>بيع بالتجزئة</fullName>
            </value>
            <value>
                <fullName>تجاري</fullName>
            </value>
            <value>
                <fullName>صناعي</fullName>
            </value>
            <value>
                <fullName>معسكر العمل</fullName>
            </value>
            <value>
                <fullName>مرافق المجتمع</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>