force-app/main/default/objects/Project__c/fields/Ownership_Type__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Type__c</fullName>
    <label>Ownership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Multi Ownership Property</fullName>
                <default>true</default>
                <label>Multi Ownership Property</label>
            </value>
            <value>
                <fullName>Single Ownership Property</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>