force-app/main/default/objects/Project__c/fields/Ownership_Type_AR__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Type_AR__c</fullName>
    <label>Ownership Type AR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>عقار متعدد الملكية</fullName>
                <default>true</default>
                <label>عقار متعدد الملكية</label>
            </value>
            <value>
                <fullName>عقار ملكية مفردة</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>