force-app/main/default/objects/Project__c/fields/Parking_Included_per_unit__c.field-meta.xml
<CustomField>
    <fullName>Parking_Included_per_unit__c</fullName>
    <label>Parking Included per unit</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>