force-app/main/default/objects/Project__c/fields/Permitted_Use_Land__c.field-meta.xml
<CustomField>
    <fullName>Permitted_Use_Land__c</fullName>
    <label>Permitted Use Land</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>