force-app/main/default/objects/Project__c/fields/Permitted_Use_Land_Ar__c.field-meta.xml
<CustomField>
    <fullName>Permitted_Use_Land_Ar__c</fullName>
    <label>Permitted Use Land Ar</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>