force-app/main/default/objects/Project__c/fields/Permitted_Variance_Land__c.field-meta.xml
<CustomField>
    <fullName>Permitted_Variance_Land__c</fullName>
    <label>Permitted Variance Land</label>
    <length>255</length>
    <type>Text</type>
</CustomField>