force-app/main/default/objects/Project__c/fields/Phase_Date__c.field-meta.xml
<CustomField>
    <fullName>Phase_Date__c</fullName>
    <label>Phase Date</label>
    <type>Date</type>
</CustomField>