force-app/main/default/objects/Project__c/fields/PO_BOX_AR__c.field-meta.xml
<CustomField>
    <fullName>PO_BOX_AR__c</fullName>
    <description>To display the LAND SPA</description>
    <label>PO BOX AR</label>
    <length>50</length>
    <type>Text</type>
</CustomField>