force-app/main/default/objects/Project__c/fields/ProfitCenter__c.field-meta.xml
<CustomField>
    <fullName>ProfitCenter__c</fullName>
    <label>Profit Center</label>
    <length>255</length>
    <type>Text</type>
</CustomField>