force-app/main/default/objects/Project__c/fields/Project_Code_Ar__c.field-meta.xml
<CustomField>
    <fullName>Project_Code_Ar__c</fullName>
    <label>Project Code Ar</label>
    <length>255</length>
    <type>Text</type>
</CustomField>