force-app/main/default/objects/Project__c/fields/Project_Header__c.field-meta.xml
<CustomField>
    <fullName>Project_Header__c</fullName>
    <description>Project Header</description>
    <inlineHelpText>Enter Project Header</inlineHelpText>
    <label>Project Header</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>