force-app/main/default/objects/Project__c/fields/Project_Image__c.field-meta.xml
<CustomField>
    <fullName>Project_Image__c</fullName>
    <description>Add Project Image.</description>
    <inlineHelpText>Add Project Image.</inlineHelpText>
    <label>Project Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>