force-app/main/default/objects/Project__c/fields/Project_Location__c.field-meta.xml
<CustomField>
    <fullName>Project_Location__c</fullName>
    <description>Project Location</description>
    <inlineHelpText>Enter Project Location in Latitude and Longitude</inlineHelpText>
    <label>Project Location</label>
    <scale>3</scale>
    <type>Location</type>
</CustomField>