force-app/main/default/objects/Project__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <label>Project</label>
    <length>255</length>
    <type>Text</type>
</CustomField>