force-app/main/default/objects/Project__c/fields/Project_Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Sub_Type__c</fullName>
    <label>Project Sub Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Aspirational</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>