force-app/main/default/objects/Project__c/fields/Property_Name_BF_SPA__c.field-meta.xml
<CustomField>
    <fullName>Property_Name_BF_SPA__c</fullName>
    <label>Property Name BF-SPA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>