force-app/main/default/objects/Project__c/fields/Proximity_Header__c.field-meta.xml
<CustomField>
    <fullName>Proximity_Header__c</fullName>
    <description>Proximity Header</description>
    <inlineHelpText>Enter Proximity Header</inlineHelpText>
    <label>Proximity Header</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>