force-app/main/default/objects/Project__c/fields/Resvered_GFA__c.field-meta.xml
<CustomField>
    <fullName>Resvered_GFA__c</fullName>
    <label>Resvered GFA</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>