force-app/main/default/objects/Project__c/fields/SAP_Project_No__c.field-meta.xml
<CustomField>
    <fullName>SAP_Project_No__c</fullName>
    <label>SAP Project No</label>
    <length>30</length>
    <type>Text</type>
</CustomField>