force-app/main/default/objects/Project__c/fields/SAP_Project_Unique__c.field-meta.xml
<CustomField>
    <fullName>SAP_Project_Unique__c</fullName>
    <externalId>true</externalId>
    <label>SAP Project Unique</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>