force-app/main/default/objects/Project__c/fields/Seller_Name_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Seller_Name_Arabic__c</fullName>
    <label>Seller Name Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>