force-app/main/default/objects/Project__c/fields/Seller_P_O_Box_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Seller_P_O_Box_Arabic__c</fullName>
    <label>Seller P O Box Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>