force-app/main/default/objects/Project__c/fields/Seller_Registration_No__c.field-meta.xml
<CustomField>
    <fullName>Seller_Registration_No__c</fullName>
    <label>Seller Registration No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>