force-app/main/default/objects/Project__c/fields/Seller_Registration_No_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Seller_Registration_No_Arabic__c</fullName>
    <label>Seller Registration No Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>