force-app/main/default/objects/Project__c/fields/Show_In_Manage_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Show_In_Manage_Inventory__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show In Manage Inventory</label>
    <type>Checkbox</type>
</CustomField>