force-app/main/default/objects/Project__c/fields/Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Name__c</fullName>
    <label>Site Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OMR_NONPRJ</fullName>
            </value>
            <value>
                <fullName>MDL_NONPRJ</fullName>
            </value>
            <value>
                <fullName>MEL_NONPRJ</fullName>
            </value>
            <value>
                <fullName>DHRE2BTS_NONPRJ</fullName>
            </value>
            <value>
                <fullName>DPG_NONPRJ</fullName>
            </value>
            <value>
                <fullName>TPJAC_NONPRJ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>