force-app/main/default/objects/Project__c/fields/Size_Type__c.field-meta.xml
<CustomField>
    <fullName>Size_Type__c</fullName>
    <description>Size Type</description>
    <inlineHelpText>select Size Type</inlineHelpText>
    <label>Size Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Project_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Retail</fullName>
            </value>
            <value>
                <fullName>Hospitality(Hotel,Motels,Resorts)</fullName>
            </value>
            <value>
                <fullName>2 BHK</fullName>
            </value>
            <value>
                <fullName>3 BHK</fullName>
            </value>
            <value>
                <fullName>4 BHK</fullName>
            </value>
            <value>
                <fullName>Bunglow</fullName>
            </value>
            <value>
                <fullName>Villa</fullName>
            </value>
            <value>
                <fullName>Among Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>