force-app/main/default/objects/Project__c/fields/Specification_Header__c.field-meta.xml
<CustomField>
    <fullName>Specification_Header__c</fullName>
    <description>Specification Header</description>
    <inlineHelpText>Enter Specification Header</inlineHelpText>
    <label>Specification Header</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>