force-app/main/default/objects/Project__c/fields/SyncToUnifier__c.field-meta.xml
<CustomField>
    <fullName>SyncToUnifier__c</fullName>
    <label>SyncToUnifier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>