force-app/main/default/objects/Project__c/fields/Target_DLD_Value__c.field-meta.xml
<CustomField>
    <fullName>Target_DLD_Value__c</fullName>
    <label>DLD CAP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>