force-app/main/default/objects/Project__c/fields/Thw_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>Thw_Company_Code__c</fullName>
    <label>Thw Company Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>