force-app/main/default/objects/Project__c/fields/Total_Towers__c.field-meta.xml
<CustomField>
    <fullName>Total_Towers__c</fullName>
    <description>This field fetches the total number of towers per project</description>
    <label>Total Towers</label>
    <summaryFilterItems>
        <field>Module__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Tower</value>
    </summaryFilterItems>
    <summaryForeignKey>Module__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>