force-app/main/default/objects/Project__c/fields/Total_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Units__c</fullName>
    <description>This field provides us the total number of apartments/flats per project</description>
    <label>Total Units</label>
    <summaryFilterItems>
        <field>Module__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Unit</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Module__c.Unit_Status__c</field>
        <operation>notEqual</operation>
        <value>Refuge</value>
    </summaryFilterItems>
    <summaryForeignKey>Module__c.Project__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>